# Policybrief-G2C

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.bootstrap/: payload.part01  payload.part02  payload.part03  payload.part04  payload.part05  payload.part06  payload.part07  payload.part08
.github/workflows/: bootstrap-policybrief.yml  ci.yml
config/: categories.yaml  sources.example.yaml
docs/: architecture.md  data-schema.md  operations.md  source-policy.md
src/policybrief_g2c/: __init__.py  cli.py  config.py  logging_config.py  models.py  pipeline.py
src/policybrief_g2c/collectors/: __init__.py  base.py  html.py  rss.py
src/policybrief_g2c/newsletter/: __init__.py  renderer.py  sender.py
src/policybrief_g2c/newsletter/templates/: newsletter.html.j2  newsletter.txt.j2
src/policybrief_g2c/processing/: classifier.py  cleaner.py  deduplicator.py  ranker.py
src/policybrief_g2c/storage/: repository.py
src/policybrief_g2c/summarization/: __init__.py  base.py  extractive.py  llm.py
tests/: test_collectors.py  test_newsletter_sender.py  test_pipeline.py  test_processing.py  test_summarization.py
tests/fixtures/: demo_article.html  demo_feed.xml
