[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "policybrief-g2c"
version = "0.1.0"
description = "Citizen-friendly Korean government policy newsletter generator"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "PolicyBrief G2C Contributors" }]
dependencies = [
  "beautifulsoup4>=4.12",
  "feedparser>=6.0",
  "httpx>=0.27",
  "jinja2>=3.1",
  "lxml>=5.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-dateutil>=2.9",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "rapidfuzz>=3.9",
  "tenacity>=8.2",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "ruff>=0.5",
  "types-PyYAML>=6.0",
]

[project.scripts]
policybrief = "policybrief_g2c.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/policybrief_g2c"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["feedparser.*", "bs4.*", "dateutil.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config"

[tool.coverage.run]
source = ["policybrief_g2c"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
